semaine3-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-app
  labels:
    app: sre-app
spec:
  selector:
    app: sre-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
